change logos and add facebook chat

--- a/data/settings.json
+++ b/data/settings.json
@@ -2,7 +2,7 @@
   "organizer": {
     "name": "GDG Yangon",
     "twitter": "gdgyangon",
-    "url": "http://gdgyangon.org"
+    "url": "https://gdgyangon.org"
   },
   "startDate": "2018-10-27T09:00:00+03:00",
   "endDate": "2017-10-28T19:00:00+03:00",
