--- a/data/settings.json
+++ b/data/settings.json
@@ -27,6 +27,11 @@
       "route": "team",
       "permalink": "/team/",
       "label": "Team"
+    },
+    {
+      "route":"speakers",
+      "permalink": "/speakers/",
+      "label": "Speakers"
     }
   ],
   "heroSettings": {
