--- a/data/settings.json
+++ b/data/settings.json
@@ -32,6 +32,11 @@
       "route":"speakers",
       "permalink": "/speakers/",
       "label": "Speakers"
+    },
+    {
+      "route":"schedule",
+      "permalink":"/schedule/",
+      "label":"Schedule"
     }
   ],
   "heroSettings": {
@@ -53,8 +58,8 @@
     },
     "speakers": {
       "title": "Speakers",
-      "metaDescription": "Hear from the Googlers, Partners, and Guest Speakers who are building the future of cloud. Check back often as we add more speakers, including our customers and partners.",
-      "description": "Hear from the Googlers, Partners, and Guest Speakers who are building the future of cloud. Check back often as we add more speakers, including our customers and partners.",
+      "metaDescription": "Hear from the Rockstar Speakers who are building the future of web, android, and UI/UX. The speakers are well-known experts in the respective field. We are very honored and proud to host this year event with such notable speakers",
+      "description": "Hear from the Rockstar Speakers who are building the future of web, android, and UI/UX. The speakers are well-known experts in the respective field. We are very honored and proud to host this year event with such notable speakers",
       "background": {
         "color": "#FFF"
       },
